--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,30 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.14.2",
-    "typescript": "^4.9.5"
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5",
+    "zod": "^3.21.4"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^5.1.0",
+    "morgan": "^1.10.0",
     "ts-node-dev": "^2.0.0"
   }
 }
